[gd_scene load_steps=8 format=3 uid="uid://dyqmlonqecdcg"]

[ext_resource type="Texture2D" uid="uid://dehoacmc70adn" path="res://resources/ui/dialogue_box_new.png" id="1_2oaff"]
[ext_resource type="Script" path="res://scenes/ui/dialogue.gd" id="1_beyvn"]
[ext_resource type="Texture2D" uid="uid://cv7vbbdx771aw" path="res://resources/66a5581d44ca3ae7f5e52ff9b3467a8a.png" id="2_3ckvd"]
[ext_resource type="FontFile" uid="uid://babcd8dobf0e7" path="res://resources/DisposableDroidBB.ttf" id="2_yfub5"]
[ext_resource type="Texture2D" uid="uid://bkt2vl1bpfjca" path="res://resources/ui/normal.png" id="3_5qg63"]
[ext_resource type="Texture2D" uid="uid://65i8isa5kftc" path="res://resources/ui/hover.png" id="5_ofo37"]
[ext_resource type="Texture2D" uid="uid://dsfoura3qn81q" path="res://resources/characters/agnes_short.png" id="6_wh2bj"]

[node name="Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_beyvn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -248.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Dialogue_box" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("1_2oaff")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Dialogue_box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 46
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 46

[node name="Normal_Dialogue" type="RichTextLabel" parent="MarginContainer/Dialogue_box/MarginContainer"]
visible = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_yfub5")
theme_override_font_sizes/normal_font_size = 50
text = "This is a text box example
And that's all"

[node name="Options" type="MarginContainer" parent="MarginContainer/Dialogue_box/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 2
theme_override_constants/margin_bottom = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/Dialogue_box/MarginContainer/Options"]
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("3_5qg63")
texture_hover = ExtResource("5_ofo37")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Dialogue_box/MarginContainer/Options/TextureButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.04
anchor_right = 1.0
anchor_bottom = 0.43
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_yfub5")
theme_override_font_sizes/normal_font_size = 50
text = "example"

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/Dialogue_box/MarginContainer/Options"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 1
texture_normal = ExtResource("3_5qg63")
texture_hover = ExtResource("5_ofo37")

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/Dialogue_box/MarginContainer/Options/TextureButton2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_yfub5")
theme_override_font_sizes/normal_font_size = 50
text = "example"

[node name="Character_A" type="TextureRect" parent="MarginContainer/Dialogue_box"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_right = 0.9
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_wh2bj")

[node name="Character_B" type="TextureRect" parent="MarginContainer/Dialogue_box"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.1
offset_top = -712.0
offset_right = 427.0
grow_vertical = 0
texture = ExtResource("2_3ckvd")

[connection signal="pressed" from="MarginContainer/Dialogue_box/MarginContainer/Options/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/Dialogue_box/MarginContainer/Options/TextureButton2" to="." method="_on_texture_button_2_pressed"]
